# flowforge

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  COMPILER_COMPLETE.md  COMPILER_DIRECTORY_STRUCTURE.md  COMPILER_FINAL_STATUS.md  COMPILER_QUICKSTART.md  COMPILER_SESSION_SUMMARY.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DELIVERABLES_FINAL.md  DELIVERABLES_INDEX.md  DELIVERY_SUMMARY.md  DEPENDENCY_DIAGRAM.md  DESIGN_SUMMARY.md  GITHUB_PUSH_GUIDE.md  GITHUB_SHOWCASE.md  MODULE_BOUNDARIES.md  MVP_AND_ROADMAP.md  Makefile  PLATFORM_FEATURES.md  PROJECT_COMPLETE.md  PYTHON_SDK_COMPLETE.md  README.md  REPOSITORY_DESIGN_SUMMARY.md  REPOSITORY_STRUCTURE.md  SDK_DIRECTORY_STRUCTURE.md  START_HERE.md  VERIFICATION_CHECKLIST.md  docker-compose.yml  go.work
compiler/: ARCHITECTURE.md  IMPLEMENTATION.md  README.md  go.mod
demo/: main.go
deployment/: deployment_test.go  engine.go  generators.go  state.go
flowforge-cli/: README.md  setup.py
flowforge-vscode/: README.md  package-lock.json  package.json  tsconfig.json
ir/: Makefile  (+3 more)
sdk/: IMPLEMENTATION.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
sdk/examples/: README.md  conditional_pipeline.py  fan_out_fan_in.py  simple_etl.py
sdk/flowforge/: __init__.py
sdk/flowforge/cli/: __init__.py  cli.py
sdk/flowforge/compiler/: __init__.py  ir_exporter.py
sdk/flowforge/core/: __init__.py  pipeline.py  task.py
sdk/flowforge/decorators/: __init__.py  common.py
sdk/flowforge/executor/: __init__.py  local.py
sdk/flowforge/graph/: __init__.py  visualizer.py
sdk/flowforge/ir/: __init__.py  builder.py  graph.py  spec.py  validator.py
sdk/flowforge/schema/: __init__.py  inference.py
sdk/tests/: conftest.py
sdk/tests/fixtures/: sample_pipelines.py
sdk/tests/integration/: __init__.py  test_end_to_end.py  test_local_execution.py
sdk/tests/unit/: test_pipeline.py  test_schema.py  test_task.py
(+77 files in other folders)
